--- a/.github/workflows/sync_master.yml
+++ b/.github/workflows/sync_master.yml
@@ -17,3 +17,4 @@ jobs:
         source_repo: "https://github.com/PX4/PX4-Autopilot.git"
         source_branch: "master"
         destination_branch: "master"
+        github_token: ${{ secrets.PAT }}
