--- a/src/drivers/dynamixel/CMakeLists.txt
+++ b/src/drivers/dynamixel/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2018 PX4 Development Team. All rights reserved.
+#   Copyright (c) 2018-2021 PX4 Development Team. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -32,13 +32,13 @@
 ############################################################################
 px4_add_module(
 	MODULE drivers__dynamixel
-	MAIN dynamixel_position
-	STACK_MAIN 1200
+	MAIN dynamixel
 	COMPILE_FLAGS
+		${MAX_CUSTOM_OPT_LEVEL}
+		-Wno-write-strings
 	SRCS
-    message.c
-		dynamixel_position.c
+		dynamixel.cpp
+		message.cpp
 	DEPENDS
-		platforms__common
+		px4_work_queue
 	)
-# vim: set noet ft=cmake fenc=utf-8 ff=unix :
